objects/Product2/fields/Description2__c.field-meta.xml
<CustomField>
    <fullName>Description2__c</fullName>
    <label>Description2</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>