objects/Product2/fields/Description3__c.field-meta.xml
<CustomField>
    <fullName>Description3__c</fullName>
    <label>Description3</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>