objects/Product2/fields/Description4__c.field-meta.xml
<CustomField>
    <fullName>Description4__c</fullName>
    <label>Description4</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>