objects/Product2/fields/Line_Of_Business_Code__c.field-meta.xml
<CustomField>
    <fullName>Line_Of_Business_Code__c</fullName>
    <label>Line Of Business Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>-</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>