objects/Product2/fields/Marketing_Name2__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Name2__c</fullName>
    <label>Marketing Name2</label>
    <type>TextArea</type>
</CustomField>