objects/Product2/fields/Marketing_Name3__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Name3__c</fullName>
    <label>Marketing Name3</label>
    <type>TextArea</type>
</CustomField>