objects/Product2/fields/Marketing_Name4__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Name4__c</fullName>
    <label>Marketing Name4</label>
    <type>TextArea</type>
</CustomField>