objects/Product2/fields/Material_Path__c.field-meta.xml
<CustomField>
    <fullName>Material_Path__c</fullName>
    <label>Material Path</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>