objects/Product2/fields/Revision__c.field-meta.xml
<CustomField>
    <fullName>Revision__c</fullName>
    <label>Revision</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>